--- a/app/src/main/res/layout/activity_class_detail.xml
+++ b/app/src/main/res/layout/activity_class_detail.xml
@@ -21,50 +21,56 @@
 
     </com.google.android.material.appbar.AppBarLayout>
 
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@color/colorLightGray"
+        android:orientation="horizontal">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:orientation="horizontal"
+                android:paddingStart="10dp">
+
+                <ImageView
+                    android:id="@+id/imageView4"
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:layout_weight="1"
+                    android:src="@drawable/classes" />
+
+                <TextView
+                    android:id="@+id/textFragmentName"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_weight="1"
+                    android:gravity="center|left"
+                    android:paddingLeft="10dp"
+                    android:text="Class"
+                    android:textColor="@color/colorGray"
+                    android:textSize="40sp"
+                    android:textStyle="bold" />
+
+            </LinearLayout>
+
+        </LinearLayout>
+
+    </LinearLayout>
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="@color/colorBackGroundBrown"
         android:orientation="vertical"
         android:padding="5dp">
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:background="@android:color/white"
-            android:orientation="horizontal">
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_weight="1"
-                android:orientation="vertical">
-
-                <ImageView
-                    android:id="@+id/imageView"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:layout_marginTop="10dp"
-                    android:layout_weight="1"
-                    android:background="@android:color/white"
-                    android:scaleType="center"
-                    app:srcCompat="@drawable/ic_class_detail" />
-
-                <TextView
-                    android:id="@+id/textView6"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:layout_weight="2"
-                    android:background="@android:color/white"
-                    android:text="Class"
-                    android:textAlignment="center"
-                    android:textColor="@color/colorGray"
-                    android:textSize="24sp"
-                    android:textStyle="bold" />
-
-            </LinearLayout>
-
-        </LinearLayout>
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -105,8 +111,9 @@
                         android:id="@+id/textHour"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
+                        android:layout_marginLeft="14dp"
                         android:layout_weight="1.1"
-                        android:text="Start Hour:"
+                        android:text="Hour:"
                         android:textSize="14sp"
                         android:textStyle="bold" />
 
@@ -114,6 +121,7 @@
                         android:id="@+id/classHour"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
+                        android:layout_marginLeft="10dp"
                         android:layout_weight="1"
                         android:text="20:00" />
                 </LinearLayout>
@@ -124,7 +132,6 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="20dp"
-                android:layout_marginTop="5dp"
                 android:orientation="vertical">
 
                 <LinearLayout
@@ -152,6 +159,7 @@
                         android:id="@+id/textDuration"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
+                        android:layout_marginLeft="14dp"
                         android:layout_weight="1.1"
                         android:text="Duration:"
                         android:textSize="14sp"
@@ -161,8 +169,72 @@
                         android:id="@+id/classDuration"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
+                        android:layout_marginLeft="10dp"
                         android:layout_weight="1"
                         android:text="04:00" />
+                </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:orientation="horizontal">
+
+                    <TextView
+                        android:id="@+id/textYear"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1.1"
+                        android:text="Year:"
+                        android:textSize="14sp"
+                        android:textStyle="bold" />
+
+                    <TextView
+                        android:id="@+id/classYear"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:text="2019" />
+
+                    <TextView
+                        android:id="@+id/textSemester"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginLeft="14dp"
+                        android:layout_weight="1.1"
+                        android:text="Semester:"
+                        android:textSize="14sp"
+                        android:textStyle="bold" />
+
+                    <TextView
+                        android:id="@+id/classSemester"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginLeft="10dp"
+                        android:layout_weight="1"
+                        android:text="2" />
+                </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:orientation="horizontal">
+
+                    <TextView
+                        android:id="@+id/textRoom"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="3.6"
+                        android:text="Room:"
+                        android:textSize="14sp"
+                        android:textStyle="bold" />
+
+                    <TextView
+                        android:id="@+id/classRoom"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:text="3333" />
+
                 </LinearLayout>
 
             </LinearLayout>
@@ -172,7 +244,6 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="20dp"
-                android:layout_marginTop="10dp"
                 android:orientation="horizontal">
 
                 <LinearLayout
@@ -187,10 +258,10 @@
                         android:orientation="horizontal">
 
                         <TextView
-                            android:id="@+id/textSubject2"
+                            android:id="@+id/textUniversity"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:layout_marginTop="10dp"
+                            android:layout_marginTop="5dp"
                             android:layout_weight="3.6"
                             android:text="University:"
                             android:textAlignment="viewStart"
@@ -202,12 +273,13 @@
                             android:id="@+id/classUniversity"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:layout_marginTop="10dp"
+                            android:layout_marginTop="5dp"
                             android:layout_weight="1"
                             android:text="universityName"
                             android:textAlignment="viewStart"
                             android:textColor="@color/colorGray"
                             android:textSize="14sp" />
+
                     </LinearLayout>
 
 
@@ -233,10 +305,10 @@
                         android:orientation="horizontal">
 
                         <TextView
-                            android:id="@+id/textSubject2"
+                            android:id="@+id/textCourse"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:layout_marginTop="10dp"
+                            android:layout_marginTop="5dp"
                             android:layout_weight="3.6"
                             android:text="Course:"
                             android:textAlignment="viewStart"
@@ -248,7 +320,7 @@
                             android:id="@+id/classCourse"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:layout_marginTop="10dp"
+                            android:layout_marginTop="5dp"
                             android:layout_weight="1"
                             android:text="courseName"
                             android:textAlignment="viewStart"
@@ -261,6 +333,8 @@
 
             </LinearLayout>
 
+
+
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -279,10 +353,10 @@
                         android:orientation="horizontal">
 
                         <TextView
-                            android:id="@+id/textSubject2"
+                            android:id="@+id/textDiscipline"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:layout_marginTop="10dp"
+                            android:layout_marginTop="5dp"
                             android:layout_weight="3.6"
                             android:text="Discipline:"
                             android:textAlignment="viewStart"
@@ -294,12 +368,13 @@
                             android:id="@+id/classDiscipline"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:layout_marginTop="10dp"
+                            android:layout_marginTop="5dp"
                             android:layout_weight="1"
                             android:text="disciplineName"
                             android:textAlignment="viewStart"
                             android:textColor="@color/colorGray"
                             android:textSize="14sp" />
+
                     </LinearLayout>
 
 
@@ -325,10 +400,10 @@
                         android:orientation="horizontal">
 
                         <TextView
-                            android:id="@+id/textSubject3"
+                            android:id="@+id/textSubject"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:layout_marginTop="10dp"
+                            android:layout_marginTop="5dp"
                             android:layout_weight="3.6"
                             android:text="Subject:"
                             android:textAlignment="viewStart"
@@ -340,7 +415,7 @@
                             android:id="@+id/classSubject"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:layout_marginTop="10dp"
+                            android:layout_marginTop="5dp"
                             android:layout_weight="1"
                             android:text="subject"
                             android:textAlignment="viewStart"
@@ -385,7 +460,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
                         android:layout_marginLeft="20dp"
-                        android:layout_marginTop="10dp"
+                        android:layout_marginTop="20dp"
                         android:text="Topics And Contents here" />
                 </LinearLayout>
             </ScrollView>
